--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         </header>
         <main>
             <div id="banner">
-                <img
+                <!-- <img
                     class="banner-img"
                     src="./assets/images/slideshow/slide1.jpg"
                     alt="Banner Print-it"
-                />
+                /> -->
+				<div class="banner-img"></div>
                 <img
                     class="arrow arrow_left"
                     src="./assets/images/arrow_left.png"
@@ -44,7 +45,12 @@
                     Impressions tous formats
                     <span>en boutique et en ligne</span>
                 </p>
-                <div class="dots"></div>
+                <div class="dots">
+                    <div class="dot dot_selected"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
             </div>
             <section id="about-us" class="container">
                 <div>
