modification fonctionnement carrousel imgs

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     src="./assets/images/slideshow/slide1.jpg"
                     alt="Banner Print-it"
                 /> -->
-				<div class="banner-img"></div>
+            </div>
+            <div class="arrows_container">
                 <img
                     class="arrow arrow_left"
                     src="./assets/images/arrow_left.png"
@@ -41,10 +42,10 @@
                     src="./assets/images/arrow_right.png"
                     alt="fleche droite Print-it"
                 />
-                <p>
+                <!-- <p>
                     Impressions tous formats
                     <span>en boutique et en ligne</span>
-                </p>
+                </p> -->
                 <div class="dots">
                     <div class="dot dot_selected"></div>
                     <div class="dot"></div>
