--- a/index.html
+++ b/index.html
@@ -24,13 +24,7 @@
             <a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
         </header>
         <main>
-            <div id="banner">
-                <!-- <img
-                    class="banner-img"
-                    src="./assets/images/slideshow/slide1.jpg"
-                    alt="Banner Print-it"
-                /> -->
-            </div>
+            <div id="banner"></div>
             <div class="arrows_container">
                 <img
                     class="arrow arrow_left"
@@ -42,10 +36,6 @@
                     src="./assets/images/arrow_right.png"
                     alt="fleche droite Print-it"
                 />
-                <!-- <p>
-                    Impressions tous formats
-                    <span>en boutique et en ligne</span>
-                </p> -->
                 <div class="dots">
                     <div class="dot dot_selected"></div>
                     <div class="dot"></div>
